# rpi

./: README.md
password-server/: docker-compose.yaml  nginx.conf
password-server/server/: README.md
password-server/server/app/: pyproject.toml
password-server/server/app/src/: auth.py  main.py  models.py  rsuty_pstore_service.py
password-server/server/app/src/routers/: auth_router.py  pass_store_router.py
password-server/server/rusty_pstore/: Cargo.toml  README.md
password-server/server/rusty_pstore/src/: crypto.rs  lib.rs  utils.rs
password-server/ui/: README.md  eslint.config.js  package-lock.json  package.json
password-server/ui/public/: index.html
password-server/ui/src/: index.tsx
password-server/ui/src/components/: banner.tsx
server/app/src/: auth.py  main.py
server/app/src/routers/: auth_router.py
ui/: .gitignore  package-lock.json  package.json  tsconfig.json
ui/src/: index.tsx
ui/src/auth/: authProvider.tsx  authService.ts
ui/src/components/: banner.tsx
ui/src/utils/: config.ts
